2008-05-25  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotLockOnThisOrTypesTest.cs: New. Unit tests for 
	DoNotLockOnThisOrTypesRule
	* DoNotLockOnWeakIdentityObjectsTest.cs: New. Unit tests for 
	DoNotLockOnWeakIdentityObjectsRule
	* Test.Rules.Concurrency.mdp: Update MD project file

2008-05-11  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Test.Rules.Concurrency.mdp: Fix references.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* DontUseLockedRegionOutsideMethodTest.cs: Update header and add 
	another test case where the number of Enter and Exit don't match.

2008-04-26  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Test.Rules.Concurrency.mdp, DontUseLockedRegionOutsideMethodTest.cs:
	  My first rule with its tests! It's very simple but more will come
	  (noted in the TODO's). I hope it works because I cannot check it
	  right now, the Gendarme.Tests are failing compilation for me.

2008-04-05  Sebastien Pouliot  <sebastien@ximian.com>

	* DoubleCheckLockingTest.cs: Add two more test cases and update
	existing tests to the new, simpler, test design.
	* WriteStaticFieldFromInstanceMethodTest.cs: Fix namespace.
	* Test.Rules.Concurrency.mdp: Add reference to Test.Rules.dll

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DoubleCheckLockingTest.cs
	* NonConstantStaticFieldsShouldNotBeVisibleTest.cs
	* WriteStaticFieldFromInstanceMethodTest.cs:
		Update unit tests wrt framework changes.

2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* NonConstantStaticFieldsShouldNotBeVisibleTest.cs: New. Unit tests
	by Andreas Noever.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Concurrency.mdp: Update project file.

2007-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* WriteStaticFieldFromInstanceMethodTest.cs: Update API to fix build.

2006-11-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Concurrency.mdp: Add new tests to MonoDevelop project.